--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -51,6 +51,7 @@
         <redisson-spring-boot-starter.version>3.34.1</redisson-spring-boot-starter.version>
         <cloud.version>2023.0.3</cloud.version>
         <alibaba.version>2023.0.1.0</alibaba.version>
+        <knife4j.version>4.5.0</knife4j.version>
     </properties>
 
     <dependencyManagement>
@@ -68,6 +69,12 @@
                 <version>${alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>org.mybatis</groupId>
