--- a/backend/server-framwork/server-common-model/pom.xml
+++ b/backend/server-framwork/server-common-model/pom.xml
@@ -37,8 +37,9 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
