--- a/backend/server-gateway/pom.xml
+++ b/backend/server-gateway/pom.xml
@@ -27,6 +27,10 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-web</artifactId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+                    <groupId>org.springframework.boot</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
 
