--- a/backend/chat-server/pom.xml
+++ b/backend/chat-server/pom.xml
@@ -27,7 +27,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <netty-all.version>4.1.112.Final</netty-all.version>
+        <wx-mp-spring-boot-starter.version>4.7.0</wx-mp-spring-boot-starter.version>
     </properties>
 
     <dependencies>
@@ -35,27 +35,22 @@
         <dependency>
             <groupId>com.yaonie.intelligent.assessment.server</groupId>
             <artifactId>server-common-starter</artifactId>
-            <version>0.0.9-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
-
-        <!--公共工具模块-->
         <dependency>
             <groupId>com.yaonie.intelligent.assessment.server</groupId>
             <artifactId>server-common-util</artifactId>
-            <version>0.0.9-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
-
-        <!--公共对象模块-->
         <dependency>
             <groupId>com.yaonie.intelligent.assessment.server</groupId>
             <artifactId>server-common-model</artifactId>
-            <version>0.0.9-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-                    <groupId>org.springframework.boot</groupId>
-                </exclusion>
-            </exclusions>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yaonie.intelligent.assessment.server</groupId>
+            <artifactId>evaluation-server-client</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- https://doc.xiaominfo.com/docs/quick-start#openapi2 -->
@@ -65,32 +60,22 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--OpenFeign公共包-->
-        <dependency>
-            <groupId>com.yaonie.intelligent.assessment.server</groupId>
-            <artifactId>evaluation-server-client</artifactId>
-            <version>0.0.9-SNAPSHOT</version>
-        </dependency>
-
         <!-- netty -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>${netty-all.version}</version>
         </dependency>
 
         <!-- websocket -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
-            <version>${spring.version}</version>
         </dependency>
 
         <!-- validation参数校验 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-            <version>3.3.3</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -139,17 +124,11 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
-        <!--监控-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
-<!--        </dependency>-->
-
         <!-- https://mvnrepository.com/artifact/com.github.binarywang/wx-java-mp-spring-boot-starter -->
         <dependency>
             <groupId>com.github.binarywang</groupId>
             <artifactId>wx-java-mp-spring-boot-starter</artifactId>
-            <version>4.6.2.B</version>
+            <version>4.7.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine -->
@@ -157,6 +136,12 @@
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
             <version>3.1.8</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker-qual</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--JWT: token生成工具-->
