--- a/backend/evaluation-server/pom.xml
+++ b/backend/evaluation-server/pom.xml
@@ -22,13 +22,18 @@
     <dependencies>
         <dependency>
             <groupId>com.yaonie.intelligent.assessment.server</groupId>
+            <artifactId>system-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yaonie.intelligent.assessment.server</groupId>
             <artifactId>server-common-util</artifactId>
             <version>0.0.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.yaonie.intelligent.assessment.server</groupId>
             <artifactId>server-common-model</artifactId>
-            <version>0.0.9-SNAPSHOT</version>
+            <version>${project.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
@@ -85,28 +90,8 @@
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
             <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
-            <version>4.1.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.guava</groupId>
-                    <artifactId>guava</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.codehaus.groovy</groupId>
-                    <artifactId>groovy</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>33.3.0-jre</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy</artifactId>
-            <version>3.0.22</version>
-        </dependency>
+
         <!-- https://cloud.tencent.com/document/product/436/10199-->
         <dependency>
             <groupId>com.qcloud</groupId>
@@ -122,7 +107,7 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.69</version>
+            <version>1.70</version>
         </dependency>
         <!-- https://github.com/alibaba/easyexcel -->
         <dependency>
@@ -157,13 +142,6 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
-        <!--快速生成验证码-->
-        <dependency>
-            <groupId>com.github.whvcse</groupId>
-            <artifactId>easy-captcha</artifactId>
-            <version>1.6.2</version>
-            <scope>compile</scope>
-        </dependency>
 <!--        &lt;!&ndash;nacos 注册中心&ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>com.alibaba.cloud</groupId>-->
@@ -181,13 +159,6 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-        <!-- 热部署依赖 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>com.github.rholder</groupId>
             <artifactId>guava-retrying</artifactId>
@@ -197,6 +168,11 @@
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-amqp</artifactId>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>com.yaonie.intelligent.assessment.server</groupId>
+            <artifactId>ai-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
     </dependencies>
 
