--- a/backend/evaluation-server/src/main/resources/application.yml
+++ b/backend/evaluation-server/src/main/resources/application.yml
@@ -58,4 +58,7 @@ knife4j:
       default:
         api-rule: package
         api-rule-resources:
-          - com.yaonie.intelligent.assessment.server.springbootinit.controller
+          - com.yaonie.intelligent.assessment.server.springbootinit.com.yaonie.intelligent.assessment.controller
+springdoc:
+  swagger-ui:
+    enabled: true
