--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.0</version>
+        <version>3.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.yaonie.intelligent.assessment.server</groupId>
@@ -23,6 +23,7 @@
         <module>server-client</module>
         <module>match-server</module>
         <module>system-server</module>
+        <module>ai-model</module>
     </modules>
     <properties>
         <project.version>0.0.9-SNAPSHOT</project.version>
@@ -34,7 +35,7 @@
         <skipTests>true</skipTests>
         <lombok.version>1.18.34</lombok.version>
         <commons.version>3.16.0</commons.version>
-        <spring.version>3.4.0</spring.version>
+        <spring.version>3.4.1</spring.version>
         <hutool.version>5.8.31</hutool.version>
         <springfox-swagger.version>3.0.0</springfox-swagger.version>
         <swagger-models.version>1.6.0</swagger-models.version>
@@ -42,19 +43,19 @@
         <mybatis-spring.version>3.0.4</mybatis-spring.version>
         <mybatis.version>3.5.16</mybatis.version>
         <mysql-connector.version>8.0.33</mysql-connector.version>
-        <spring-data-commons.version>3.4.0</spring-data-commons.version>
+        <spring-data-commons.version>3.4.1</spring-data-commons.version>
         <jjwt.version>0.9.1</jjwt.version>
         <logstash-logback.version>7.2</logstash-logback.version>
         <minio.version>8.5.11</minio.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
-        <netty-all.version>4.1.112.Final</netty-all.version>
+        <netty-all.version>4.1.115.Final</netty-all.version>
         <weixin-java-mp.version>4.6.3.B</weixin-java-mp.version>
-        <mybatis-plus-boot-starter.version>3.5.7</mybatis-plus-boot-starter.version>
+        <mybatis-plus-boot-starter.version>3.5.9</mybatis-plus-boot-starter.version>
         <jsoup.version>1.15.3</jsoup.version>
         <okhttp.version>4.12.0</okhttp.version>
         <redisson-spring-boot-starter.version>3.34.1</redisson-spring-boot-starter.version>
-        <cloud.version>2023.0.3</cloud.version>
-        <alibaba.version>2023.0.1.0</alibaba.version>
+        <cloud.version>2024.0.0</cloud.version>
+        <alibaba.version>2023.0.3.2</alibaba.version>
         <knife4j.version>4.5.0</knife4j.version>
         <redission.version>3.34.1</redission.version>
         <pagehelper.boot.version>2.1.0</pagehelper.boot.version>
@@ -64,12 +65,28 @@
         <tomcat.embed.version>11.0.2</tomcat.embed.version>
         <velocity-engine-core.version>2.4.1</velocity-engine-core.version>
         <tomcat.embed.version>10.1.34</tomcat.embed.version>
+        <protobuf.version>4.28.3</protobuf.version>
+        <lettuce-core.version>6.5.0.RELEASE</lettuce-core.version>
+        <groovy.version>4.0.24</groovy.version>
+        <guava.version>33.3.0-jre</guava.version>
+        <sharding-jdbc-spring.version>4.1.1</sharding-jdbc-spring.version>
+        <xstream.version>1.4.21</xstream.version>
+        <spring-boot.maven.plugin.version>3.4.1</spring-boot.maven.plugin.version>
     </properties>
-
     <dependencyManagement>
 
         <dependencies>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi</artifactId>
+                <version>2.7.0</version>
+            </dependency>
             <!-- 当前位置自定义的模块 -->
+            <dependency>
+                <groupId>com.yaonie.intelligent.assessment.server</groupId>
+                <artifactId>server-common-util</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.yaonie.intelligent.assessment.server</groupId>
                 <artifactId>server-common-starter</artifactId>
@@ -81,13 +98,48 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <!-- 依赖修复部分 -->
+            <dependency>
+                <groupId>org.apache.shardingsphere</groupId>
+                <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+                <version>${sharding-jdbc-spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.groovy/groovy -->
+            <dependency>
+                <groupId>org.apache.groovy</groupId>
+                <artifactId>groovy</artifactId>
+                <version>${groovy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.thoughtworks.xstream</groupId>
+                <artifactId>xstream</artifactId>
+                <version>${xstream.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>${lettuce-core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity-engine-core</artifactId>
                 <version>${velocity-engine-core.version}</version>
             </dependency>
 
-            <!--  -->
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-redis</artifactId>
@@ -98,12 +150,6 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring-webmvc.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-core</artifactId>
-                <version>${logback-core.version}</version>
             </dependency>
 
             <dependency>
@@ -177,6 +223,7 @@
                 <artifactId>weixin-java-mp</artifactId>
                 <version>${weixin-java-mp.version}</version>
             </dependency>
+
             <!-- netty -->
             <dependency>
                 <groupId>io.netty</groupId>
@@ -188,6 +235,7 @@
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
             </dependency>
+
             <!-- MyBatis-->
             <dependency>
                 <groupId>org.mybatis</groupId>
@@ -199,12 +247,14 @@
                 <artifactId>mybatis-plus-generator</artifactId>
                 <version>${mybatis-plus-generator.version}</version>
             </dependency>
+
             <!--Mysql数据库驱动-->
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector.version}</version>
             </dependency>
+
             <!--JWT(Json Web Token)登录支持-->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
@@ -230,41 +280,65 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.maven.plugin.version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
+
     <repositories>
+        <!--            <repository>-->
+        <!--                <id>central</id>-->
+        <!--                <url>https://maven.aliyun.com/repository/central</url>-->
+        <!--                <releases>-->
+        <!--                    <enabled>true</enabled>-->
+        <!--                </releases>-->
+        <!--                <snapshots>-->
+        <!--                    <enabled>true</enabled>-->
+        <!--                </snapshots>-->
+        <!--            </repository>-->
         <repository>
-            <id>central</id>
-            <url>https://repo.maven.apache.org/maven2</url>
+            <id>aliyun_google</id>
+            <name>Aliyun_google</name>
+            <url>https://maven.aliyun.com/repository/google</url>
+        </repository>
+        <repository>
+            <id>aliyun_center</id>
+            <name>Aliyun Central</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>aliyun_snapshots</id>
+            <name>Aliyun Snapshots</name>
+            <url>https://maven.aliyun.com/repository/snapshots</url>
         </repository>
         <repository>
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
             <url>https://repo.spring.io/milestone</url>
             <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <releases>
                 <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
             </snapshots>
         </repository>
     </repositories>
-
-
-    <!--    <repositories>-->
-    <!--        <repository>-->
-    <!--            <id>central</id>-->
-    <!--            <url>https://maven.aliyun.com/repository/central</url>-->
-    <!--            <releases>-->
-    <!--                <enabled>true</enabled>-->
-    <!--            </releases>-->
-    <!--            <snapshots>-->
-    <!--                <enabled>true</enabled>-->
-    <!--            </snapshots>-->
-    <!--        </repository>-->
-    <!--        <repository>-->
-    <!--            <id>maven_central</id>-->
-    <!--            <name>Maven Central</name>-->
-    <!--            <url>https://repo.maven.apache.org/maven2/</url>-->
-    <!--        </repository>-->
-    <!--    </repositories>-->
 
 </project>
