--- a/backend/search-server/src/main/resources/application-dev.yaml
+++ b/backend/search-server/src/main/resources/application-dev.yaml
@@ -22,7 +22,7 @@ spring:
     timeout: 604800
   data:
     redis:
-      host: 1.94.141.32
+      host: ${BASE_HOST:127.0.0.1}
       port: 6379
       timeout: 5000
       database: 8
@@ -51,7 +51,7 @@ knife4j:
       default:
         api-rule: package
         api-rule-resources:
-          - com.yaonie.intelligent.assessment.server.search_server.controller
+          - com.yaonie.intelligent.assessment.server.search_server.com.yaonie.intelligent.assessment.controller
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
